# USN-HFT-SIM

./: .gitignore  CMakeLists.txt  README.md  TODO.md  TODO_ROADMAP.md
apps/: CMakeLists.txt  run_sim_market.cpp  run_sim_order.cpp
apps/common/: messages.hpp
apps/market_udp/: feed_publisher.cpp  feed_subscriber.cpp
apps/order_tcp/: order_client.cpp  order_gateway.cpp
benchmarks/: CMakeLists.txt  run_benchmark_suite.py
benchmarks/core/: mpsc_queue_bench.cpp
docs/: BENCHMARK.md  BENCHMARK_SUITE.md  NETNS_TESTING.md  PROJECT_DOCUMENTATION.md  README.md  ROADMAP_ACCEPTANCE.md  RUN_SIM_MARKET.md  RUN_SIM_ORDER.md  TCP_PROTOCOL.md  TESTING.md  UDP_PROTOCOL.md
examples/: CMakeLists.txt
examples/core/: mpsc_queue_example.cpp  packet_ring_example.cpp
examples/optimization/: zero_copy_example.cpp
include/usn/apps/: messages.hpp
include/usn/core/: memory_pool.hpp  mpsc_queue.hpp  packet.hpp  packet_ring.hpp  tracing.hpp
include/usn/io/: batch_io.hpp  busy_poll.hpp  epoll_wrapper.hpp  io_status.hpp  io_status_types.hpp  io_uring_wrapper.hpp
include/usn/optimization/: numa_utils.hpp  zero_copy.hpp
include/usn/protocol/: tcp_congestion.hpp  tcp_protocol.hpp  tcp_reassembly.hpp  tcp_retransmission.hpp  tcp_socket.hpp  tcp_state_machine.hpp  udp_feedback.hpp  udp_protocol.hpp  udp_socket.hpp
tests/: CMakeLists.txt  run_netns_suite.py
tests/core/: CMakeLists.txt  mpsc_queue_basic.cpp  packet_ring_basic.cpp  tracing_basic.cpp
tests/io/: CMakeLists.txt  batch_io_basic.cpp  busy_poll_basic.cpp  cross_io_consistency.cpp  epoll_basic.cpp  io_status_basic.cpp  io_uring_basic.cpp
tests/optimization/: CMakeLists.txt  numa_utils_basic.cpp  zero_copy_basic.cpp
tests/protocol/: CMakeLists.txt  tcp_protocol_basic.cpp  tcp_socket_basic.cpp  udp_feedback_basic.cpp  udp_protocol_basic.cpp  udp_socket_basic.cpp
